Refactorization done as first version

--- a/docs/contents/molecular_systems/double_well/double_well_potential.ipynb
+++ b/docs/contents/molecular_systems/double_well/double_well_potential.ipynb
@@ -259,9 +259,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle - \\frac{4 Eo \\left(1 - \\frac{3 x^{2}}{a^{2}}\\right)}{a^{2}}$"
+      ],
+      "text/plain": [
+       "-4*Eo*(1 - 3*x**2/a**2)/a**2"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x, Eo, a = sy.symbols('x Eo a')\n",
     "f = Eo*((x/a)**4-2*(x/a)**2)\n",
@@ -280,9 +294,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{8 Eo}{a^{2}}$"
+      ],
+      "text/plain": [
+       "8*Eo/a**2"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gg.subs({x:a})"
    ]
@@ -313,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
