--- a/docs/contents/molecular_systems/double_well/molecular_dynamics.ipynb
+++ b/docs/contents/molecular_systems/double_well/molecular_dynamics.ipynb
@@ -28,10 +28,10 @@
     "simulation = Simulation(molecular_system.topology, molecular_system.system, integrator, platform)\n",
     "\n",
     "coordinates = np.zeros([1, 3], np.float32) * unit.nanometers\n",
-    "simulation.context.setPositions()\n",
+    "simulation.context.setPositions(coordinates)\n",
     "\n",
     "velocities = np.zeros([1, 3], np.float32) * unit.nanometers/unit.picoseconds\n",
-    "simulation.context.setVelocities()\n",
+    "simulation.context.setVelocities(velocities)\n",
     "\n",
     "simulation.step(1000)\n",
     "```"
@@ -410,7 +410,7 @@
    "source": [
     "### Stochastic Dynamics\n",
     "\n",
-    "Thanks to the `tools.langevin` method in this library, a simple newtonian dynamics can be run with few efforce:"
+    "Thanks to the `tools.langevin` method in this library, a simple newtonian dynamics can be run with few effort:"
    ]
   },
   {
