--- a/docs/contents/molecular_systems/free_particle/brownian_particle.ipynb
+++ b/docs/contents/molecular_systems/free_particle/brownian_particle.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The brownian particle\n",
+    "# Brownian particle\n",
     "\n",
     "The free particle is characterized for having no external potential goberning its motion. In the case of temperature and friction abscence the particle is moving in a uniform rectilineous trajectory. And when temperature and friction are present, we have nothing but a stochastic brownian particle or random walker characterized by magnitudes as diffusion."
    ]
