--- a/docs/contents/molecular_systems/double_well/molecular_system.ipynb
+++ b/docs/contents/molecular_systems/double_well/molecular_system.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## With OpenMM from scratch\n",
+    "## With OpenMM\n",
     "\n",
     "```python\n",
     "import openmm as mm\n",
